syntax = "proto3";

package DateTime;

message Timestamp {
  oneof value {
    int64 seconds = 1;
    int64 nanos = 2;
    int64 millis = 3;
  }
}
